# DonkeyWork-Agents

./: .dockerignore  .gitignore  ACTIONNODES_ANALYSIS.md  ACTIONNODES_COMPLETE.md  ACTIONNODES_RESEARCH.md  ACTION_EXECUTION_COMPLETE.md  AGENT_EDITOR_PLAN.md  API_INTEGRATION_COMPLETE.md  CURRENT_STATUS.md  Dockerfile  Dockerfile.runtime  DonkeyWork.Agents.sln  EXPRESSION_ENGINE_STATUS.md  MODULE_GAP_ANALYSIS.md  MORE_ACTIONS_STATUS.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_TESTS_COMPLETE.md  PROJECT_STATUS_AND_GAPS.md  README.md  TEST_COVERAGE_AUDIT.md  TODO.md  WORKFLOW_PERSISTENCE_COMPLETE.md  _nuget.config  bugs.md  claude.md  docker-compose.yml  keycloak.md
.github/workflows/: desktop-release.yml  docker-build.yml  executor-base.yml  pr-build-test.yml
deploy/k8s/: DEPLOYMENT.md  api-deployment.yaml  api-rbac.yaml  api-service.yaml  seaweedfs-service-patch.yaml
docker/postgres/: init.sql
docs/: INTEGRATION_TESTS.md  a2a-integration-plan.md  ios-chat-ui-estimate.md  mcp-oauth-keycloak-setup.md  orchestration-vision.md  swarm-fix-1-linger-deliver.md  swarm-fix-2-registry-cleanup.md  swarm-fix-3-conversation-registration.md  swarm-fix-4-scoped-roster.md
docs/architecture/: data-protection-keys.md
docs/milestones/: README.md  m1-orchestration-rename-plan.md  m1-orchestration-rename.md  m2-mcp-server-native-tools.md  m3-chat-interface.md  m4-mcp-oauth.md  m5-a2a-server.md  m6-api-key-user-details.md  m7-mcp-server-user-orchestrations.md
k8s/: api-deployment.yaml
src/DonkeyWork.Agents.Api/: DonkeyWork.Agents.Api.csproj  DonkeyWork.Agents.Models.http  Program.cs  appsettings.Development.json  appsettings.json
src/actors/: CLAUDE.md
src/agents/: readme.md
src/credentials/: readme.md
src/frontend/: .dockerignore  CLAUDE.md  Dockerfile  colorstyle.html  eslint.config.js  lightmmode.colorstyle.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+2 more)
src/frontend/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/frontend/apps/desktop/src-tauri/capabilities/: default.json
src/frontend/apps/desktop/src-tauri/icons/: icon.icns
src/frontend/apps/desktop/src-tauri/src/: auth.rs  lib.rs  main.rs
(+2122 files in other folders)
