[package]
name = "donkeywork-desktop"
version = "0.1.0"
description = "DonkeyWork Desktop"
authors = ["DonkeyWork"]
edition = "2021"

[lib]
name = "donkeywork_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
