[package]
name = "donkeywork-desktop"
version = "0.1.0"
description = "DonkeyWork Desktop"
authors = ["DonkeyWork"]
edition = "2021"

[lib]
name = "donkeywork_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
tokio = { version = "1", features = ["time", "net", "io-util"] }
urlencoding = "2"
